# functions/src/endpoints/docs/index.ts
@@ -1,3 +1,3 @@
 export { getIndexedText } from "./get";
-export { annotateDoc, highlightText } from "./edit";
 export { saveDocVersion } from "./save";
+export { annotateDoc, highlightText, addComments } from "./edit";
