# openapi.yaml
@@ -83,7 +83,6 @@ paths:
           schema:
             type: string
       requestBody:
-        required: true
         content:
           application/json:
             schema:
@@ -92,28 +91,64 @@ paths:
                 sections:
                   type: array
                   items:
-                    type: object
-                    properties:
-                      startIndex:
-                        type: integer
-                        format: int32
-                      endIndex:
-                        type: integer
-                        format: int32
+                    $ref: "#/components/schemas/TextRange"
+        required: true
       responses:
         "200":
           description: Successfully highlighted text.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    description: Returns a confirmation with the url of the edited document
         "400":
           description: Missing query - documentId.
         "401":
           description: Unauthorized - User not logged in or invalid/expired token.
         "405":
           description: Method Not Allowed
+  /api/addComments:
+    post:
+      operationId: addComments
+      summary: Add comments based on sections of the text.
+      description: Add comments to sections of a Google Doc based on provided text ranges. Requires OAuth 2.0 authentication.
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: documentId
+          required: true
+          description: The ID of the Google Document.
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                comments:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/Comment"
+        required: true
+      responses:
+        "200":
+          description: Successfully added comments.
+        "400":
+          description: Missing query - documentId.
+        "401":
+          description: Unauthorized - User not logged in or invalid/expired token.
+        "405":
+          description: Method Not Allowed
+components:
+  schemas:
+    Comment:
+      type: object
+      properties:
+        section:
+          $ref: "#/components/schemas/TextRange"
+        feedback:
+          type: string
+    TextRange:
+      type: object
+      properties:
+        startIndex:
+          type: integer
+        endIndex:
+          type: integer
